[metadata]
name = ziaplot
version = attr: ziaplot.__version__
author = Collin J. Delker
author_email = ziaplot@collindelker.com
url = https://ziaplot.readthedocs.io
description = Draw light-weight plots, graphs, and charts
long_description = file: README.md
long_description_content_type = text/markdown
keywords = plot, chart, graph, smith chart, bar, pie
license = MIT
project_urls =
    Documentation = https://ziaplot.readthedocs.io
    Source Code = https://github.com/cdelker/ziaplot
classifiers =
        Development Status :: 4 - Beta
        Programming Language :: Python :: 3
        Programming Language :: Python :: 3.9
        Programming Language :: Python :: 3.10
        Programming Language :: Python :: 3.11
        Programming Language :: Python :: 3.12
        Programming Language :: Python :: 3.13
        License :: OSI Approved :: MIT License
        Operating System :: OS Independent
        Intended Audience :: Education
        Intended Audience :: Science/Research
        Intended Audience :: End Users/Desktop
        Intended Audience :: Developers
        Topic :: Scientific/Engineering :: Mathematics
        Topic :: Scientific/Engineering :: Visualization


[options]
packages = find:
zip_safe = False
python_requires = >= 3.9
include_package_data = True

[options.extras_require]
cairo = cairosvg
math = ziafont>=0.10; ziamath>=0.12; latex2mathml
